[gd_scene load_steps=3 format=3 uid="uid://bwnj3iiowexyq"]

[ext_resource type="Texture2D" uid="uid://ccfl250sq6ula" path="res://assets/backgrounds/Blue.png" id="1_4ka5a"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_kitkb"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_kitkb")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4ka5a")
stretch_mode = 1

[node name="GameTitle" type="Label" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 80.0
offset_right = 133.0
offset_bottom = 181.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0.737255, 1)
theme_override_font_sizes/font_size = 60
text = "Bouncet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
texture_filter = 1
offset_left = 488.0
offset_top = 264.0
offset_right = 656.0
offset_bottom = 304.0
size_flags_horizontal = 4
text = "Start"

[node name="LevelSelectionButton" type="Button" parent="."]
texture_filter = 1
offset_left = 488.0
offset_top = 328.0
offset_right = 656.0
offset_bottom = 368.0
size_flags_horizontal = 4
text = "Level Selection"

[node name="LeaderboardsButton" type="Button" parent="."]
texture_filter = 1
offset_left = 488.0
offset_top = 456.0
offset_right = 656.0
offset_bottom = 496.0
size_flags_horizontal = 4
text = "Leaderboards"

[node name="NameButton" type="Button" parent="."]
texture_filter = 1
offset_left = 488.0
offset_top = 392.0
offset_right = 656.0
offset_bottom = 430.0
text = "Change Name"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LevelSelectionButton" to="." method="_on_level_selection_button_pressed"]
[connection signal="pressed" from="LeaderboardsButton" to="." method="_on_leaderboards_button_pressed"]
[connection signal="pressed" from="NameButton" to="." method="_on_name_button_pressed"]
